# Seam

./: .env.example  .gitattributes  .gitignore  .rgignore  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  GEMINI.md  HANDOFF_BRANDING.md  HANDOFF_DONE.md  HANDOFF_NEXT.md  HISTORY.md  HISTORY_INDEX.md  LICENSE  NOTICE  PLAN_LOG.md  PROJECT_STATUS.md  QWEN.md  README.md  REPO_LEDGER.md  ROADMAP.md  SEAM_SPEC_V0.1.md  SECURITY.md  compose.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  seam.py  test_seam.py
.gemini/: settings.json
.github/: CODEOWNERS  dependabot.yml
.seam/: cross_index.md
Test-Seam-All/: test_seam.py
archive/: README.md
benchmarks/: BENCHMARK_LOG.md  README.md  SEAM_BENCHMARK_BLUEPRINT_V1.md
branding/: README.md  retro-direction.md  seam-retro-preview.html  seam_terminal_preview.py
docs/: BENCHMARK_SOP.md  CODE_LAYOUT.md  COMMANDS.md  CONVENTIONS.md  DATA_ROUTING.md  ENGINEERING_LOG.md  HOLOGRAPHIC_SURFACE.md  MIRL_V1.md  PGVECTOR_LOCAL.md  PROJECT_MAP.md  PROTECTION_MODEL.md  RAG_ARCHITECTURE.md  README.md  RETRIEVAL_EVAL_V1.md  SEAM_OPERATOR_GUIDE.md  SOP_ADVISOR_EXECUTOR_LOOP.md  SOP_BENCHMARKABLE_STATE_ROADMAP.md  SOP_CRITICAL_BENCHMARKABILITY_FIX.md  SOP_DEEPSEEK_PARALLEL_AUDIT_EXECUTION.md  SOP_DEEPSEEK_SECURITY_BENCHMARK_REMEDIATION.md  SOP_DEEP_AUDIT_DEEPSEEK_EXECUTION.md  SOP_DEEP_AUDIT_REMEDIATION_BLUEPRINT.md  SOP_EXTERNAL_BENCH_LOCOMO_SEAM_ADAPTER.md  SOP_HOLOGRAPHIC_SURFACE.md  SOP_MODEL_INTEGRATION.md  SOP_PRODUCTION_READINESS_REMEDIATION.md  SOP_TRACK_M_P4_SCORE_IMPROVEMENTS_AND_MEASUREMENT.md  SOP_VIDEO_COMMANDS_AND_STRUCTURE.md  SOP_WEBUI_BATCH_HARDENING_DEEPSEEK.md  SYMBOL_NURSERY.md  errors.md  retrieval_gold_fixtures.json  setup.md
experimental/: __init__.py
installers/: README.md  install_seam.py  install_seam_windows.ps1
scripts/: bootstrap_seam.ps1  enter_seam.ps1  install_global_seam_command.ps1  pgvector-up.ps1  run_guarded.ps1  run_real_adapters_guarded.ps1  setup-seam.ps1  store_benchmark.ps1
seam_runtime/: __init__.py  agent_memory.py  benchmark_integrity.py  benchmarks.py  cli.py  config.toml  context_views.py  dashboard.py  doctor.py  dsl.py  evals.py  holographic.py  installer.py  lossless.py  lx1.py  mcp.py  mcp_protocol.py  mirl.py  models.py  nl.py  nl_extract.py  pack.py  pgvector_bootstrap.py  pool.py  reconcile.py  retrieval.py  retry.py  runtime.py  self_improve.py  server.py  storage.py  surface_adapters.py  symbols.py  temporal.py  transpile.py  validation.py  vector.py  vector_adapters.py  verify.py
test_seam_all/: conftest.py  test_agent_memory.py  test_benchmark_integrity.py  test_cli_import_isolation.py  test_evals.py  test_external_memory_benchmarks.py  test_git_hooks.py  test_holographic_safety.py  test_locomo_dataset.py  test_locomo_judge.py  test_locomo_judge_batch.py  test_locomo_mem0_adapter.py  test_locomo_runner_cli.py  test_locomo_scoring.py  test_locomo_seam_adapter.py  test_locomo_zep_adapter.py  test_seam.py  test_server_benchmark_endpoint.py  test_skill_factory.py  test_skill_ir.py  test_skills_render_claude.py  test_storage_lifecycle.py  test_transpile.py  test_vector_adapter_table_name_validation.py
tests/: conftest.py
tools/: extract_projection_metrics.py  tokenization.py  (+3 more)
(+271 files in other folders)
